--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -161,6 +161,35 @@
     });    
   </script>
   {/if}
+  
+  {if (!$app.live)}
+  <div class="alert alert-info" role="alert">
+    <a href="#" class="close" data-dismiss="alert">&times;</a>        
+    <span class="glyphicon glyphicon-$icon" aria-hidden="true"></span>
+      <h4>Not live!</h4>
+      App Name:<b>{$app.name}</b><br>
+      App Description:<b>{$app.description}</b><br>
+      App Slug:<b>{$app.slug}</b><br>
+      App Config file:<b  >{$app.config_file}</b><br>
+      App Data Path:<b  >{$app.data_path}</b><br>
+      Site ID:<b>{$app.site_id}</b><br>
+      Live code?: <b>No</b><br>
+      Live data?: <b>{if ($app.live_db)}Yes{else}No{/if}</b><br>
+      App: <b>{$app.name}</b><br>
+      Deployment: <b>{$app.deployment}</b><br>
+      DB: <b>{$app.db}</b><br>
+      DB Key: <b>{$app.db_key}</b><br>
+      Time: <b>{$app.elapsed}s</b><br>
+      Version: <b>{$app.version}</b><br>
+      System Cache?: <b>{if ($app.cache.system)}Yes{else}No{/if}</b><br>
+      Redis Cache?: <b>{if ($app.cache.redis)}Yes{else}No{/if}</b><br>
+      Mongo Cache?: <b>{if ($app.cache.mongo)}Yes{else}No{/if}</b><br>
+      DB Config: {$app.db_conf|dump}<br>
+      App Config: {$app.config|dump}<br>
+      
+  </div>
+  {/if}
+  
 </body>
 
 </html>
