--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -186,6 +186,7 @@
       Mongo Cache?: <b>{if ($app.cache.mongo)}Yes{else}No{/if}</b><br>
       DB Config: {$app.db_conf|dump}<br>
       App Config: {$app.config|dump}<br>
+      Cache: {$app.cache|dump}<br>
       
   </div>
   {/if}
