filters, CV, on page filters

--- a/pages/user-profile-edit.html
+++ b/pages/user-profile-edit.html
@@ -37,7 +37,7 @@
   {/block}
   
   {block name=subview_container}
-    {{ "subviews":["overview","settings","message","history","bookings","wishlist","inbox","verification","artist","gallery","collector"],"prefix": "_user-profile-edit-" }}
+    {{ "subviews":["overview","settings","message","history","bookings","wishlist","inbox","verification","artist","gallery","collector","details"],"prefix": "_user-profile-edit-" }}
   {/block}
   
   {block name=subview_bottom}
