--- a/pages/blank.html
+++ b/pages/blank.html
@@ -2,13 +2,13 @@
   {block name=content}
   
     <div class="container">
-      <h2 class="page-title">{{"name": "$title", "type":"text", "value": "The Title"}}</h2>
+      <h2 class="page-title">Terms</h2>
     </div>
 
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          {{"name": "$content", "type":"html", "value":"<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>"}}
+          Foo Bar
         </div>
       </div>
       <div class="gap"></div>
