--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -44,6 +44,7 @@
   <link rel="StyleSheet" href="/css/site.css?ver={$version}" type="text/css" media="screen"/>
 
   <link rel="canonical" href="{$full_path}" />
+  <link rel="manifest" href="afr/json/manifest.json" />
   
   {$styles = $app.header.styles|array_unique}
   {foreach from = $styles item=style}
