--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -15,6 +15,11 @@
   <meta name="keywords" lang="en" content="{$page.se_keywords}">
   <meta name="author" lang="en" content="{$page.author|default:'Syspensa'}">  
   <meta name="robots" content="noindex, nofollow">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Expo" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   
   {foreach from = $app.header.meta item=meta}
     {$meta|meta_tag}
@@ -44,7 +49,23 @@
   <link rel="StyleSheet" href="/css/site.css?ver={$version}" type="text/css" media="screen"/>
 
   <link rel="canonical" href="{$full_path}" />
-  <link rel="manifest" href="afr/json/manifest.json" />
+  {if ($app.user.id)}
+      {$create = create_manifest($app.user.id)}
+      {$path = "/afr/json/manifest_`$app.user.id`.json"}
+    <link rel="manifest" href= "{$path}" />
+  {/if}
+
+
+  <!-- place this in a head section -->
+  <link rel="apple-touch-icon" sizes="512x512" href="/img/vpatina-logo-512.png"
+    />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/img/apple_splash_2048.png" sizes="2048x2732"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img//apple_splash_1668.png" sizes="1668x2224" />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img/apple_splash_1536.png" sizes="1536x2048"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/img/apple_splash_1125.png" sizes="1125x2436"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/img/apple_splash_1242.png" sizes="1242x2208"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img/apple_splash_750.png" sizes="750x1334"    />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img/apple_splash_640.png" sizes="640x1136"    />
   
   {$styles = $app.header.styles|array_unique}
   {foreach from = $styles item=style}
@@ -159,7 +180,7 @@
     {foreach from = $app.header.onload item=script}
    {$script}
     {/foreach}
-    });    
+    });     
   </script>
   {/if}
   
