hotfixes to master

--- a/pages/share.html
+++ b/pages/share.html
@@ -11,14 +11,14 @@
   <div class='gap gap-small'></div>
   
   {if (!$user)}
-    <div class="text-center mt10 mb10">Connect with:</div>
+    <!--div class="text-center mt10 mb10">Connect with:</div-->
     {$list_class = 'list-inline'}
     {$list_class = 'list-centered'}
     
     {{"include": "_user-login-third-party.html"}}
     <div class="gap gap-small clear-float"></div>
       
-    <div class="text-center mt10 mb10">OR</div>
+    <!--div class="text-center mt10 mb10">OR</div-->
   {/if}
   {{"include": "_mail-form-share.html"}}
   <div class="gap"></div>
