--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -1,16 +1,20 @@
+{$page_name = explode("/",$app.page.path)}
 <!doctype html>
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/-->
-  
-  <title>{$page.se_title|default:$page.name}</title>
+  {if ($page_name[1] == 'profile' || $page_name[1] == 'selectedart' || $page_name[1] == 'artwork' || $page_name[1] == 'exhibition')}
+    <title>{$page_name[1]|ucfirst}</title>
+  {else}
+    <title>{$page.se_title|default:$page.name}</title>
+  {/if}
+
   <meta name="description" content="{$page.se_description}">
   <meta name="keywords" lang="en" content="{$page.se_keywords}">
   <meta name="author" lang="en" content="{$page.author|default:'Syspensa'}">  
@@ -20,6 +24,8 @@
   <meta name="apple-mobile-web-app-title" content="Expo" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta property="og:image:height" content="300"/>  
+  <meta property="og:image:width" content="640"/>
   
   {foreach from = $app.header.meta item=meta}
     {$meta|meta_tag}
@@ -31,8 +37,9 @@
   {$version = $app.version}
   <link rel="StyleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" media="screen"/>
-  <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"-->
+  <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">-->
   <link rel="StyleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" media="screen"/>
+  <!--<link rel="StyleSheet" href="https://forkaweso.me/Fork-Awesome/assets/fork-awesome/css/fork-awesome.css" type="text/css" media="screen"/>-->
   
   <link rel="StyleSheet" href="/afr/css/afr_base.css?v={$version}" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="/afr/css/afr_rental.css?v={$version}" type="text/css" media="screen"/>
@@ -42,7 +49,7 @@
   <link rel="StyleSheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600" type="text/css" media="screen"/>
   
   <link rel="StyleSheet" href="/font/afr/styles.css?v=2" type="text/css" media="screen"/>
-  
+    
   <link rel="StyleSheet" href="/traveler/css/icomoon.css" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="/traveler/css/styles.css?v={$version}" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="/traveler/css/mystyles.css?v={$version}" type="text/css" media="screen"/>
@@ -56,7 +63,22 @@
     <link rel="manifest" href= "{$path}" />
   {/if}
 
+  {*dump(explode("/",$app.page.path))*}
+  
 
+  {*dump($page_name[1])*}
+
+  {if ($page_name[1] == 'profile' || $page_name[1] == 'selectedart' || $page_name[1] == 'artwork' || $page_name[1] == 'exhibition')}
+  <link rel="apple-touch-icon" sizes="512x512" href="{$scope.curator_photo|photo:'ig'}"
+    />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="{$scope.curator_photo|photo:'ig'}" sizes="2048x2732"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="1668x2224" />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="1536x2048"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="1125x2436"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="1242x2208"  />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="750x1334"    />
+  <link rel="apple-touch-startup-image" media="screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="{$scope.curator_photo|photo:'ig'}" sizes="640x1136"    />
+  {else}
   <!-- place this in a head section -->
   <link rel="apple-touch-icon" sizes="512x512" href="/img/vpatina-logo-512.png"
     />
@@ -67,7 +89,7 @@
   <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/img/apple_splash_1242.png" sizes="1242x2208"  />
   <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img/apple_splash_750.png" sizes="750x1334"    />
   <link rel="apple-touch-startup-image" media="screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/img/apple_splash_640.png" sizes="640x1136"    />
-  
+  {/if}
   {$styles = $app.header.styles|array_unique}
   {foreach from = $styles item=style}
     {$style|style_tag}
@@ -130,6 +152,12 @@
   {block name=top}{/block}
   {block name=body}{/block}
   
+ <!--<script type="text/javascript" src="/afr/js/masonry.pkgd.js"></script>--->
+  <!-------Jquery min------>
+  <!--<script type="text/javascript" src="/afr/js/jquery.min.js"></script>-->
+  <!------ End Jquery------>
+
+
   <script type="text/javascript" src="/js/main.js?v={$version}"></script>
   <script type="text/javascript" src="/traveler/js/slimmenu.js"></script>
   <script type="text/javascript" src="/traveler/js/nicescroll.js"></script>
@@ -143,6 +171,17 @@
   <script type="text/javascript" src="/traveler/js/fitvids.js"></script>
   <script type="text/javascript" src="/traveler/js/tweet.js"></script>
   <script type="text/javascript" src="/traveler/js/gridrotator.js"></script>
+
+  <!-----isotope---------->
+  <script type="text/javascript" src="/afr/js/isotope.js"></script>
+  <!-----isotope End---------->
+  <!-----masonary---------->
+  <script type="text/javascript" src="/afr/js/masonry.js"></script>
+  <!-----masonary End---------->
+
+  <script type="text/javascript" src="/afr/js/masonry-isotope-custom.js"></script>
+
+   
   
   <script type="text/javascript" src="/afr/bower/geocomplete/jquery.geocomplete.min.js"></script>
   <script type="text/javascript" src="/afr/bower/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
@@ -164,7 +203,13 @@
   <script type="text/javascript" src="/afr/bower/codemirror/lib/codemirror.js"></script>
   <script type="text/javascript" src="/afr/bower/codemirror/mode/smarty/smarty.js"></script>
   
+
+  <!-----custom js--------->
   <script type="text/javascript" src="/traveler/js/custom.js?v={$version}"></script>
+  <!----- End custom js----->
+
+  
+  
 
   <!--script type="text/javascript" src="/afr/bower/bootstrap-toggle/js/bootstrap-toggle.min.js"></script-->
   <!--script type="text/javascript" src="/afr/bower/bootstrap-modal/js/bootstrap-modalmanager.js"></script>
