--- a/pages/base/sidebar.html
+++ b/pages/base/sidebar.html
@@ -15,6 +15,7 @@
       <li><a href="{$p}/profile/{$user.id}?_pv=1" class="ajax-loader" data-target="#subview-container">View Profile</a></li>
       <li id="edit-profile"><a href="{$p}/ACsettings"> Edit Profile</a></li>
       <!-- <li><a href="{$smarty.const.PAGE_ACCOUNT|link}{$user.id}">Account</a></li> -->
+      <li><a href="{$p}/ACsettings/{$user.id}/edit/subscription?_pv=1" class="ajax-loader" data-target="#subview-container">Subscription</a></li>
       <li><a href="?act=logout">Logout</a></li>
     </ul>
   </div>
