--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
                         <div class='gap gap-small'></div>                      
                       {/if}
                       {{"include": "_user-login-form.html"}}          
-                      <a href="{$smarty.const.PAGE_REGISTER|link}{$query_string}">New To {$site.name}?</a> <input class="btn" style="background-color:#32CD32; font-weight: bold; color:white" type="submit" value="Sign up for {$site.name}" onclick="location.href='http://3.108.99.134/2checkout/pricing.html';"/><br>
+                      <a href="{$smarty.const.PAGE_REGISTER|link}{$query_string}">New To {$site.name}?</a> <input class="btn" style="background-color:#32CD32; font-weight: bold; color:white" type="submit" value="Sign up for {$site.name}" onclick="location.href='https://vpatina.com/pricing-plan';"/><br>
                       <a href="{$smarty.const.PAGE_PASSWORD|link}{$query_string}">Forgot Password?</a>
                     {/if}
                   </div>
