real credit card issue

--- a/pages/register.html
+++ b/pages/register.html
@@ -12,7 +12,7 @@
                         <p>This is an account linked to yours that you manage.</p> 
                         {{"include": "_user-register-managed-account-form.html"}}          
                       {else}
-                        <a href="?l=1" class="btn btn-success">Register Linked Account</a>
+                        <!-- <a href="?l=1" class="btn btn-success">Register Linked Account</a> -->
                       {/if}
                       
                     
