ministe bugs, quickstart

--- a/pages/base/sidebar.html
+++ b/pages/base/sidebar.html
@@ -37,7 +37,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/" data-breakout="1"></i>Home <i class="pull-right hidden-xs showopacity fa fa-home"></i></a>
+         <a class="subview-nav-link navbar-brand" href="{$p}/tutorial"></i>Home <i class="pull-right hidden-xs showopacity fa fa-cog pull-right hidden-xs showopacity fa fa-home"></i></a>
+        <!-- <a class="navbar-brand" href="{$p}/tutorial" data-breakout="1"></i>Home <i class="pull-right hidden-xs showopacity fa fa-home"></i></a> -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
