--- a/pages/base/sidebar.html
+++ b/pages/base/sidebar.html
@@ -4,10 +4,10 @@
   {if ($user)}
   {$p = '/backend'}
   <div class="dropdown abs_top_right user-avatar ztop">
-    <a href="#" class="btn btn-default dropdown-toggle" id="dropdownMenu1" 
+    <!-- <a href="#" class="btn btn-default dropdown-toggle" id="dropdownMenu1" 
        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <img class="origin round" src="{$user|userphoto:'tiny'}" alt="{$user.display_name}">
-    </a>
+    </a> -->
     
     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
       <li><span class="ml10"><b>{$user.display_name}</b></span></li>
@@ -27,7 +27,7 @@
 {block name=content}
     
   <nav class="navbar navbar-inverse sidebar subview-nav fixed" 
-       role="navigation" data-target="#subview-container" style="z-index:999"> 
+       role="navigation" data-target="#subview-container" style="z-index:999;top:53px;"> 
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-         <a class="subview-nav-link navbar-brand" href="{$p}/tutorial"></i>Home <i class="pull-right hidden-xs showopacity fa fa-cog pull-right hidden-xs showopacity fa fa-home"></i></a>
+         <a class="subview-nav-link navbar-brand" href="{$p}/tutorial" style="text-align:left;"></i><span>Dashboard</span> <i class="pull-right hidden-xs showopacity fa fa-cog pull-right hidden-xs showopacity fa fa-home"></i></a>
         <!-- <a class="navbar-brand" href="{$p}/tutorial" data-breakout="1"></i>Home <i class="pull-right hidden-xs showopacity fa fa-home"></i></a> -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
