--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -45,9 +45,11 @@
   <link rel="StyleSheet" href="/afr/css/afr_rental.css?v={$version}" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="/afr/css/afr_tooltip.css" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="/afr/css/afr_cms.css?ver={$version}" type="text/css" media="screen"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="StyleSheet" href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700" type="text/css" media="screen"/>
   <link rel="StyleSheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600" type="text/css" media="screen"/>
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="StyleSheet" href="/font/afr/styles.css?v=2" type="text/css" media="screen"/>
     
   <link rel="StyleSheet" href="/traveler/css/icomoon.css" type="text/css" media="screen"/>
