--- a/pages/base/index.html
+++ b/pages/base/index.html
@@ -132,7 +132,7 @@
   <script type="text/javascript" src="/afr/bower/fancybox/dist/jquery.fancybox.min.js"></script>
   <script type="text/javascript" src="/afr/bower/summernote/dist/summernote.min.js"></script>
   <script type="text/javascript" src="/afr/bower/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-  <script type="text/javascript" src="/afr/bower/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.all.min.js"></script-->
+  <script type="text/javascript" src="/afr/bower/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.all.min.js"></script>
   
     
   {$scripts = $app.header.base_scripts|array_unique}
@@ -146,6 +146,16 @@
   {foreach from = $app.header.code item=code}
     {$code}
   {/foreach}
+
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){
+          (c[a].q=c[a].q||[]).push(arguments);
+        };
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "jy21dk1w3x");
+</script>
   
 </head>
 
